# apple-to-google

./: .env.dist  .gitignore  CLAUDE.md  Makefile  README.md  apple-to-google  apps.py  cache.py  cli.py  itunes.py  pyproject.toml  rapidapi.py  rapidapicache.py  storeapps.py
.github/: dependabot.yml
tests/: conftest.py  test_apps.py  test_cache.py  test_cli.py  test_itunes.py  test_rapidapi.py  test_rapidapicache.py  test_storeapps.py
