[project]
name = "apple-to-google"
version = "2.1.0"
description = "Find Android (Google Play) analogues for Apple App Store applications"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "click==8.4.2",
    "requests==2.34.2",
    "urllib3==2.7.0",
    "python-dotenv==1.2.2",
]

[project.scripts]
apple-to-google = "cli:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.15.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Flat layout: the project is a set of top-level modules rather than a single
# package matching the project name.
only-include = ["cli.py", "apps.py", "itunes.py", "storeapps.py", "cache.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["cli", "apps", "itunes", "storeapps", "cache"]
omit = ["tests/*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# pycodestyle errors, pyflakes, isort, pyupgrade, flake8-bugbear
select = ["E", "F", "I", "UP", "B"]
